--- a/src/app/features/detail-hostel/popup-report/popup-report.component.html
+++ b/src/app/features/detail-hostel/popup-report/popup-report.component.html
@@ -5,9 +5,11 @@
             <span>{{'popupReport.report'|translate}}</span>
         </div>
         <nz-radio-group [(ngModel)]="radioValue" class="flex flex-col gap-3 w-full">
-            <label nz-radio nzValue="A">Option A</label>
-            <label nz-radio nzValue="B">Option B</label>
-            <label nz-radio nzValue="C">Option C</label>
+            <label nz-radio nzValue="Nội dung tin không đúng(giá, diện tích...)">Nội dung tin không đúng(giá, diện
+                tích...)</label>
+            <label nz-radio nzValue="Địa chỉ không đúng">Địa chỉ không đúng</label>
+            <label nz-radio nzValue="Không liên lạc được với chủ trọ">Không liên lạc được với chủ trọ</label>
+            <label nz-radio nzValue="Tin không có thật">Tin không có thật</label>
             <label nz-radio nzValue="M">
                 {{'popupReport.other'|translate}}
             </label>
