--- a/src/app/features/home/home-list/home-list.component.html
+++ b/src/app/features/home/home-list/home-list.component.html
@@ -15,7 +15,7 @@
 </div>
 <div>
     <h2 class="text-[14px] lg:text-[26px] font-medium block">{{"homePage.newest" | translate}}</h2>
-    <div *ngIf="!newestPostList.length" class="flex justify-center items-center"> <span
+    <div *ngIf="!newestPostList?.length" class="flex justify-center items-center"> <span
             class="text-lg">{{'pagination.noData' | translate}}</span></div>
     <div *ngIf="newestPostList.length">
         <div class="grid lg:grid-cols-5 grid-cols-1 mt-3 gap-4">
