--- a/src/app/features/admin/posts/post-list/post-list.component.html
+++ b/src/app/features/admin/posts/post-list/post-list.component.html
@@ -1,6 +1,5 @@
 <div class="p-3">
-    <form *ngIf="isShowSearch" [formGroup]="form" class="grid grid-cols-1 mt-3 gap-3 lg:grid-cols-3"
-        (keydown.enter)="$event.preventDefault()">
+    <form *ngIf="isShowSearch" [formGroup]="form" class="grid grid-cols-1 mt-3 gap-3 lg:grid-cols-3">
 
         <mat-form-field class="custom-input col-span-1" appearance="outline">
             <mat-label class="bg-white">{{'labelInput.title' | translate}}</mat-label>
