--- a/src/app/features/admin/reports/report-list/report-list.component.html
+++ b/src/app/features/admin/reports/report-list/report-list.component.html
@@ -1,7 +1,6 @@
 <div class="p-3">
 
-    <form [formGroup]="form" class="grid grid-cols-1 mt-3 gap-3 lg:grid-cols-3"
-        (keydown.enter)="$event.preventDefault()">
+    <form [formGroup]="form" class="grid grid-cols-1 mt-3 gap-3 lg:grid-cols-3">
 
         <mat-form-field class="custom-input col-span-1" appearance="outline">
             <mat-label class="bg-white">{{'AdminPage.reportpage.postReport' | translate}}</mat-label>
