--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -47,6 +47,12 @@
                     <span>{{'Menu.reports'| translate}}</span>
                 </li>
             </ul>
+            <!-- <ul nz-menu [nzMode]="'inline'" [nzInlineCollapsed]="isCollapsed" class="border-none">
+                <li nz-menu-item [routerLink]="['/admin/config']" nzMatchRouter>
+                    <span nz-icon nzType="setting" nzTheme="outline"></span>
+                    <span>{{'AdminPage.configPage.config'| translate}}</span>
+                </li>
+            </ul> -->
 
         </div>
     </nz-sider>
