--- a/src/app/features/admin/config/config.component.html
+++ b/src/app/features/admin/config/config.component.html
@@ -1,34 +1,33 @@
 <nz-spin [nzSpinning]="isLoading">
     <div class="p-3 ">
-        <form [formGroup]="form" class="flex-1 grid grid-cols-1 mt-3 gap-3 lg:grid-cols-2">
+        <form [formGroup]="form" class="flex-1 grid grid-cols-1 mt-3 gap-3 ">
 
             <mat-form-field class="custom-input col-span-1" appearance="outline">
                 <mat-label class="bg-white">{{'AdminPage.configPage.newPostFee' | translate}}</mat-label>
-                <input currencyMask [options]="config" formControlName="newPostFee" matInput />
+                <input currencyMask [options]="config" formControlName="createdPrice" matInput />
                 <mat-error>{{'postPage.required'| translate}}</mat-error>
             </mat-form-field>
 
             <mat-form-field class="custom-input col-span-1" appearance="outline">
                 <mat-label class="bg-white">{{'AdminPage.configPage.updatePostFee' | translate}}</mat-label>
-                <input currencyMask [options]="config" formControlName="updatePostFee" matInput />
+                <input currencyMask [options]="config" formControlName="updatedPrice" matInput />
                 <mat-error>{{'postPage.required'| translate}}</mat-error>
             </mat-form-field>
             <mat-form-field class="custom-input col-span-1" appearance="outline">
                 <mat-label class="bg-white">{{'AdminPage.configPage.quantityPostedForDiscount' | translate}}</mat-label>
-                <input currencyMask [options]="configNumberOfPost" formControlName="quantityPostedForDiscount"
-                    matInput />
+                <input currencyMask [options]="configNumberOfPost" formControlName="countPostToSale" matInput />
                 <mat-error>{{'postPage.required'| translate}}</mat-error>
             </mat-form-field>
             <mat-form-field class="custom-input col-span-1" appearance="outline">
                 <mat-label class="bg-white">{{'AdminPage.configPage.percentageDiscountAfterEvery' | translate}}
-                    {{form.get('quantityPostedForDiscount')?.value}} {{'AdminPage.configPage.post' |
+                    {{form.get('countPostToSale')?.value}} {{'AdminPage.configPage.post' |
                     translate}}</mat-label>
-                <input currencyMask [options]="configPercent" formControlName="percentageDiscount" matInput />
+                <input currencyMask [options]="configPercent" formControlName="percentSale" matInput />
                 <mat-error>{{'postPage.required'| translate}}</mat-error>
             </mat-form-field>
 
 
-            <div class="flex gap-2 col-span-2 justify-self-end ">
+            <div class="flex gap-2  justify-self-end ">
                 <div class="bg-primary text-white rounded-xl w-[80px] cursor-pointer h-fit flex lg:flex-col  gap-1 items-center py-2 justify-center px-2 hover:opacity-70"
                     (click)="handelApply()">
                     <span class="text-center"> {{'labelInput.apply'|translate}}</span>
